# osgXR

./: CHANGELOG.md  CMakeLists.txt  Config.cmake.in  README.md  osgXR.pc.in
cmake/: CheckOSGMultiview.cmake
docs/: API.md  Shaders.md
examples/: CMakeLists.txt  osgteapot.cpp
examples/shaders/: mvr.frag  mvr.geom  mvr.vert
include/osgXR/: Action  ActionSet  CompositionLayer  CompositionLayerQuad  Condition  Export  Extension  Hand  HandPose  HandPoseTracked  InteractionProfile  Manager  Mirror  MirrorSettings  OpenXRDisplay  Pose  PoseVelocity  Settings  Space  SubImage  Subaction  Swapchain  Version  View  osgXR
src/: Action.cpp  Action.h  ActionSet.cpp  ActionSet.h  AppView.cpp  AppView.h  AppViewGeomShaders.cpp  AppViewGeomShaders.h  AppViewOVRMultiview.cpp  AppViewOVRMultiview.h  AppViewSceneView.cpp  AppViewSceneView.h  AppViewSlaveCams.cpp  AppViewSlaveCams.h  CMakeLists.txt  CompositionLayer.cpp  CompositionLayer.h  CompositionLayerQuad.cpp  Condition.cpp  Config.in  DebugCallbackOsg.cpp  DebugCallbackOsg.h  Extension.cpp  Extension.h  FrameStampedVector.h  FrameStore.cpp  FrameStore.h  Hand.cpp  Hand.h  HandPose.cpp  HandPose.h  HandPoseTracked.cpp  HandPoseTracked.h  InteractionProfile.cpp  InteractionProfile.h  Manager.cpp  Mirror.cpp  MirrorSettings.cpp  MultiView.cpp  MultiView.h  (+26 more)
src/OpenXR/: Action.cpp  Action.h  ActionSet.cpp  ActionSet.h  Compositor.cpp  Compositor.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DepthInfo.h  EventHandler.cpp  EventHandler.h  GraphicsBinding.cpp  GraphicsBinding.h  GraphicsBindingWin32.cpp  GraphicsBindingWin32.h  GraphicsBindingX11.cpp  GraphicsBindingX11.h  HandTracker.cpp  HandTracker.h  Instance.cpp  Instance.h  InteractionProfile.cpp  InteractionProfile.h  ManagedSpace.cpp  ManagedSpace.h  Path.cpp  Path.h  Quirks.cpp  Quirks.h  Session.cpp  Session.h  Space.cpp  Space.h  Swapchain.cpp  Swapchain.h  SwapchainGroup.cpp  SwapchainGroup.h  SwapchainGroupSubImage.h  System.cpp  System.h
